5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4078/executions/1643_2703.log
== TEST (2019-04-04 14:09:03) 
-- CODE:
x =int(input("idade de uma pessoa: "))
if =18<=idade
-- ERROR:
File "XXXX", line 2
    if =18<=idade
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:08:50) 
-- CODE:
x =int(input("idade de uma pessoa: "))
if =18<idade:
else:

-- ERROR:
File "XXXX", line 2
    if =18<idade:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:09:08) 
-- CODE:
x =int(input("idade de uma pessoa: "))
if =18<=idade:
else:

-- ERROR:
File "XXXX", line 2
    if =18<=idade:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:09:21) 
-- CODE:
x =int(input("idade de uma pessoa: "))
if 18<idade:
else:

-- ERROR:
File "XXXX", line 3
    else:
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:10:04) 
-- CODE:
x =int(input("idade de uma pessoa: "))
if 18<idade:
else:

-- ERROR:
File "XXXX", line 3
    else:
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:12:47) 
-- CODE:
x =int(input("idade de uma pessoa: "))
if 18<idade:
print("eleitor")
else:
print("nao_eleitor")

-- ERROR:
File "XXXX", line 3
    print("eleitor")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:13:19) 
-- CODE:
x =int(input("idade de uma pessoa: "))
if 18<idade:
 print("eleitor")
else:
print("nao_eleitor")

-- ERROR:
File "XXXX", line 5
    print("nao_eleitor")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:13:28) 
-- CODE:
x =int(input("idade de uma pessoa: "))
if 18<idade:
 print("eleitor")
else:
 print("nao_eleitor")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if 18<idade:
NameError: name 'idade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:14:05) 
-- CODE:
x =int(input("idade de uma pessoa: "))
if18<idade:
 print("eleitor")
else:
 print("nao_eleitor")

-- ERROR:
File "XXXX", line 2
    if18<idade:
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:14:26) 
-- CODE:
x =int(input("idade de uma pessoa: "))
if18<=idade:
 print("eleitor")
else:
 print("nao_eleitor")

-- ERROR:
File "XXXX", line 2
    if18<=idade:
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:14:44) 
-- CODE:
x =int(input("idade de uma pessoa: "))
if= 18<idade:
 print("eleitor")
else:
 print("nao_eleitor")

-- ERROR:
File "XXXX", line 2
    if= 18<idade:
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:15:32) 
-- CODE:
x =int(input("idade de uma pessoa: "))
if = 18<idade:
 print("eleitor")
else:
 print("nao_eleitor")

-- ERROR:
File "XXXX", line 2
    if = 18<idade:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:16:35) 
-- CODE:
x =int(input("idade de uma pessoa: "))
if = 18<idade:
 print("eleitor")
else:
 print("nao_eleitor")

-- ERROR:
File "XXXX", line 2
    if = 18<idade:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:16:49) 
-- CODE:
x =int(input("idade de uma pessoa: "))
if18<idade:
 print("eleitor")
else:
 print("nao_eleitor")

-- ERROR:
File "XXXX", line 2
    if18<idade:
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:17:32) 
-- CODE:
idade =int(input("idade de uma pessoa: "))
if 18<idade:
 print("eleitor")
else:
 print("nao_eleitor")

-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:17:47) 
-- CODE:
idade =int(input("idade de uma pessoa: "))
if 18<idade:
 print("eleitor")
else:
 print("nao_eleitor")

-- EXECUTION TIME:
0.154031
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
